--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1466,7 +1466,7 @@ section {
 --------------------------------------------------------------*/
 .footer {
   color: #fff;
-  background: url("../img/img-prov/17005778395228nmlb961.png");
+  background: url("assets\img\poze centru\footer.png");
   background-size: cover;
   font-size: 14px;
   padding: 30px 0 20px 0;
